# GIRAFFE

./: .gitignore  .pre-commit-config.yaml  404.html  GIRAFFE_detailed results.xlsx  Makefile  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/backend/: index.html
api/core/: index.html
api/evolution/: index.html
api/nodes/: index.html
api/operators/: index.html
api/utilities/: index.html
development/contributing/: index.html
docs/: index.md
docs/api/: backend.md  core.md  evolution.md  nodes.md  operators.md  utilities.md
docs/development/: contributing.md
giraffe/: __init__.py  callback.py  crossover.py  draw.py  fitness.py  functions.py  giraffe.py  globals.py  lib_types.py  mutation.py  node.py  operators.py  pareto.py  population.py  tree.py  utils.py
giraffe/backend/: backend.py  backend_interface.py  numpy_backend.py  pytorch.py  type.py
search/: search_index.json
test/: test_backend.py  test_mutation.py  test_node.py  test_pareto.py  test_population.py  test_tree.py
test_dump/: test_tree.pkl
