[project]
dependencies = [
  "loguru>=0.7.3",
  "mypy>=1.14.1",
  "numpy>=2.2.1",
  "pytest>=8.3.4",
  "ruff>=0.9.1",
]
description = "Add your description here"
name = "giraffe"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.ruff]

line-length = 150
target-version = "py312"

# Allow autofix for all enabled rules (when `--fix`) is provided.


# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.lint]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = []
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "I", "B", "W", "C90"]

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
files = "giraffe"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
